2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure with HP-UX cc and Sun cc.
	* makemake.in: Compile the CPARTS and clisp-test.c with option "-I.".

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on HP-UX/hppa.
	* arilev0.d (divu_6432_3232_): Test HPPA_DIV_WORKS, not HPPA.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure with HP-UX make.
	Apparently HP-UX make expects an absolute filename for SHELL.
	* makemake.in: For HP-UX, set SHELL to the absolute filename of bash,
	not just "bash".

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Don't rely on unportable 'test file1 -nt file2' primitive.
	Fixes a build failure on OpenBSD.
	* Makefile.devel (GNULIB_CORE): Add stat-time, timespec.
	* utils/newer.c: New file.
	* makemake.in: Don't emit a '.SHELL' line.
	(UTILS): Add 'newer'.
	Use the 'newer' program instead of a 'newer()' shell function.
	* configure.in: Don't invoke CL_TEST_NT.
	* m4/test.m4: Remove file.
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* gllib/Makefile.am, gllib/Makefile.in: Regenerated.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	maint: Add a convenience target for checking the documentation.
	* Makefile.devel (check-doc): New target.

2017-03-15  Bruno Haible  <bruno@clisp.org>

	Fix build failure on HP-UX (regression from 2005-07-29).
	* makemake.in (gen.lispbibl.c): Fix the sed expression to also work
	with HP-UX sed.

2017-03-15  Bruno Haible  <bruno@clisp.org>

	Don't treat all non-GCC compilers like SUNWspro cc.
	* makemake.in: Fix the test of the CC_SUNPRO variable.

2017-03-15  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported
	build-prerequisites".
	* build-aux/config.guess: Update from gnulib git.
	* build-aux/snippet/*: Update from gnulib.
	* gllib/*: Likewise.
	* glm4/*: Likewise.
	* gllib/Makefile.am, gllib/Makefile.in: Regenerated.